--- a/chub/templates/chub/Q20.html
+++ b/chub/templates/chub/Q20.html
@@ -27,9 +27,9 @@
 
         <div class="size3 ">
             <p style="color: rgba(247, 234, 205, 0.91);">
-                You have 12 identical coins except one which is fake and slightly heavier or lighter. You have been
+                You have 12 identical coins except for one which is fake and slightly heavier or lighter. You have been
                 given one beam balance to find out whether that coin is heavier or lighter than the other coins.
-                What is the minimum number of times you need to use the beam balance in order to find the fake coin?
+                What is the minimum number of times you need to use the beam balance to find the fake coin?
 
 </p>
                 <br>
