--- a/chub/templates/chub/Q23.html
+++ b/chub/templates/chub/Q23.html
@@ -29,9 +29,9 @@
 
             <p style="color: rgba(247, 234, 205, 0.91);">Ann and Bob play a game that starts with nine pool balls numbered 1 through 9. On each turn, a 
 
-                player takes one of the balls off of the pool table and keeps it. The first person who can make 
+                The player takes one of the balls off of the pool table and keeps it. The first person who can make 
                 
-                exactly three of their balls add up to 15 is the winner.  
+                exactly three of their balls add up to 15 is the winner.
             </p><br><br>
 
             <Ol style="align-items: center; display:flex; flex-direction:column; line-height: 50px">
