--- a/chub/templates/chub/Q1.html
+++ b/chub/templates/chub/Q1.html
@@ -22,7 +22,7 @@
         <br> 
         
         <div class="flex direction font_size">
-            Round 1
+            Tree 1
             <hr>
         </div>
         <div class="flex direction content">
