--- a/chub/templates/chub/Q12.html
+++ b/chub/templates/chub/Q12.html
@@ -21,7 +21,7 @@
         </div>
         <br>
         <div class="flex direction font_size">
-            Round 12
+            Tree 12
             <hr>
         </div>
         <div class="flex direction content">
