--- a/chub/templates/chub/Q14.html
+++ b/chub/templates/chub/Q14.html
@@ -20,7 +20,7 @@
             <img src="{% static '/images/Technothlon white.svg'%}" class="img1" alt="">
         </div>
         <div class="flex direction font_size">
-            Round 14
+            Tree 14
             <hr>
         </div>
 
