--- a/chub/templates/chub/Q15.html
+++ b/chub/templates/chub/Q15.html
@@ -21,7 +21,7 @@
         </div>
         <br>
         <div class="flex direction font_size">
-            Round 15
+            Tree 15
             <hr>
         </div>
         <div class="flex direction content">
