--- a/chub/templates/chub/Q16.html
+++ b/chub/templates/chub/Q16.html
@@ -20,7 +20,7 @@
             <img src="{% static '/images/Technothlon white.svg'%}" class="img1" alt="">
         </div>
         <div class="flex direction font_size">
-            Round 16
+            Tree 16
             <hr>
         </div>
 
