--- a/chub/templates/chub/Q17.html
+++ b/chub/templates/chub/Q17.html
@@ -20,7 +20,7 @@
             <img src="{% static '/images/Technothlon white.svg'%}" class="img1" alt="">
         </div>
         <div class="flex direction font_size">
-            Round 17
+            Tree 17
             <hr>
         </div>
 
