--- a/chub/templates/chub/Q2.html
+++ b/chub/templates/chub/Q2.html
@@ -20,7 +20,7 @@
             <img src="{% static '/images/Technothlon white.svg'%}" class="img1" alt="">
         </div>
         <div class="flex direction font_size">
-            Round 2
+            Tree 2
             <hr>
         </div>
 
