--- a/chub/templates/chub/Q22.html
+++ b/chub/templates/chub/Q22.html
@@ -20,7 +20,7 @@
             <img src="{% static '/images/Technothlon white.svg'%}" class="img1" alt="">
         </div>
         <div class="flex direction font_size">
-            ROUND 22
+            Tree 22
             <hr>
         </div>
         <div class="flex direction content">
