--- a/chub/templates/chub/Q24.html
+++ b/chub/templates/chub/Q24.html
@@ -20,14 +20,14 @@
             <img src="{% static '/images/Technothlon white.svg'%}" class="img1" alt="">
         </div>
         <div class="flex direction font_size">
-            Round 24
+            Tree 24
             <hr>
         </div>
 
 
         <div class="size3 ">
 
-            <p style="color: rgba(247, 234, 205, 0.91);">X, Y, Z play the game of chess.  
+            <p style="color: rgba(247, 234, 205, 0.91);">Sathvik, Siddharth, Sriya play the game of chess.  
 
                 Rule of the game is as follows: 
 <br>
@@ -48,13 +48,13 @@
 <Ol style="align-items: center;display:flex; flex-direction:column; line-height: 50px">
 
     <li >
-        'X' played 13 matches.
+        'Sathvik' played 13 matches.
     </li>
     <li>
-        'Y' played 19 matches.
+        'Siddharth' played 19 matches.
     </li>
     <li>
-        'Z' played 22 matches.
+        'Sriya' played 22 matches.
     </li>
 
 
@@ -63,13 +63,13 @@
 </p>
             <Ol style="align-items: center;display:flex; flex-direction:column; line-height: 50px">
                 <li >
-                    <a onclick="window.location.replace('{% url "4" %}')"> X</a>
+                    <a onclick="window.location.replace('{% url "4" %}')"> Sathvik</a>
                 </li>
                 <li>
-                    <a onclick="window.location.replace('{% url "11" %}')">Y</a>
+                    <a onclick="window.location.replace('{% url "11" %}')">Siddharth</a>
                 </li>
                 <li>
-                    <a onclick="window.location.replace('{% url "16" %}')">Z</a>
+                    <a onclick="window.location.replace('{% url "16" %}')">Sriya</a>
                 </li>
                 <li>
                     <a onclick="window.location.replace('{% url "17" %}')">Can't predict </a>
