--- a/chub/templates/chub/Q3.html
+++ b/chub/templates/chub/Q3.html
@@ -21,7 +21,7 @@
         </div>
         <br>
         <div class="flex direction font_size">
-            Round 3
+            Tree 3
             <hr>
         </div>
         <div class="flex direction content">
