--- a/chub/templates/chub/Q6.html
+++ b/chub/templates/chub/Q6.html
@@ -21,7 +21,7 @@
             <img src="..\images\Technothlon white.svg" alt="">
         </div>
         <div class="flex direction font_size">
-            Round 6
+            Tree 6
             <hr>
             <br>
         </div>
