--- a/chub/templates/chub/Q7.html
+++ b/chub/templates/chub/Q7.html
@@ -20,7 +20,7 @@
             <img src="{% static '/images/Technothlon white.svg'%}" class="img1" alt="">
         </div>
         <div class="flex direction font_size">
-            Round 7
+            Tree 7
             <hr>
             <br>
         </div>
