--- a/chub/templates/chub/Endpage.html
+++ b/chub/templates/chub/Endpage.html
@@ -17,7 +17,7 @@
     <div class="flex direction">
         <div class="size flex ">
             <!-- TECHNOTHLON 2K22 -->
-            <img src="{% static '/images/Technothlon white.svg'%}" class="img1" alt="">
+            <img src="{% static '/images/technothlon.png'%}" class="img1" alt="">
         </div>
         <br> 
         
