--- a/chub/templates/chub/Endpage.html
+++ b/chub/templates/chub/Endpage.html
@@ -17,17 +17,16 @@
     <div class="flex direction">
         <div class="size flex ">
             <!-- TECHNOTHLON 2K22 -->
-            <img src="{% static '/images/technothlon.png'%}" class="img1" alt="">
         </div>
         <br> 
         
     
         <div class="flex direction content">
-            <div class="flex direction">
-
+            <div class="flex">
+                <div>
+                    <img src="{% static '/images/technothlon.png'%}" class="img1" alt="">
+                </div>
                 <div class="size3  ">
-
-                    <img src="../../static/images/technotholon.png">
                  Congratulations!! You have made it to the end!!
                  <br>
                  You proved that you are the deserving one for the Super Power.<br>
