--- a/chub/templates/chub/Q11.html
+++ b/chub/templates/chub/Q11.html
@@ -66,7 +66,7 @@
     let correct =true;
         document.getElementsByTagName("a")[0].addEventListener("click",(e)=>{
           e.preventDefault()
-            if(document.getElementsByTagName("input")[0].value.toLowerCase()!='b')   
+            if(document.getElementsByTagName("input")[0].value.toLowerCase()!='a')   
             { 
                 var data={
                     question: 11,    
