final answers update

--- a/chub/templates/chub/Q22.html
+++ b/chub/templates/chub/Q22.html
@@ -30,8 +30,8 @@
                     You bought good quality woods last winter to protect yourself from cold but there is some extra wood left in your store room. 
                     You along with your friend Shankar decided to make a round table to play a two-player game. In this game, the players have to place coins on the
                     table one by one until the table is full of coins. Note that no coin can be kept on another coin.
-                    The loser will be the one who will not be able to place the coin on the table. If You start first
-                    then who will win the game if both the friend plays optimally? <br>
+                    The loser will be the one who will not be able to place the coin on the table. Since You have qualified Technothlon you are given the chance to play first.
+                    Who will win the game if both of you play optimally? <br>
                     If Shankar wins---Type "SHANKAR" else type "ME".
                 </div>
             </div>
