--- a/chub/templates/chub/Q24.html
+++ b/chub/templates/chub/Q24.html
@@ -72,7 +72,7 @@
                     <a onclick="window.location.replace('{% url "16" %}')">Sriya</a>
                 </li>
                 <li>
-                    <a onclick="window.location.replace('{% url "17" %}')">Can't predict </a>
+                    <a onclick="window.location.replace('{% url "17" %}')">Can't predict the answer</a>
                 </li>
                 
           
