--- a/chub/templates/chub/Q3.html
+++ b/chub/templates/chub/Q3.html
@@ -28,7 +28,7 @@
             <div class="flex direction">
 
                 <div class="size3  ">
-                    Anoukalesio and Zaneverett are playing a new game today. They form a tower of 15 coins and make a move in alternate turns. In one step, the player can remove either 1, 2, or 4 coins from the tower. The person to make the last move wins the game. Can you find out who wins the game? Anoukalesio starts the game. 
+                    Anoukalesio and Zaneverett are playing a new game today. They form a tower of 15 coins and make a move in alternate turns. In one step, the player can remove either 1, 2, or 4 coins from the tower. The person to make the last move wins the game. Can you find out who wins the game if both plays optimally? Anoukalesio starts the game. 
 
                 </div>
             </div>
