--- a/chub/templates/chub/Q15.html
+++ b/chub/templates/chub/Q15.html
@@ -30,7 +30,7 @@
                 <div class="size3  ">
                  <p>   There are 2 trains A and B and 7 stations between them in order of 1 to 7. The time taken by each train to go from the ith station to (i+1)th station is given below. 
                     <br>
-                    1 - 4 hrs - 2 - 3 hrs - 3 - 8 hrs - 4 - 2 hrs - 5 - 6 hrs - 6 - 5 hrs - 7 
+                    S1 - 4 hrs - S2 - 3 hrs - S3 - 8 hrs - S4 - 2 hrs - S5 - 6 hrs - S6 - 5 hrs - S7 
                    <br> 
                     Train B can start moving from any station only when train A has reached the next station otherwise it has to wait. 
                     
