--- a/chub/templates/chub/Endpage.html
+++ b/chub/templates/chub/Endpage.html
@@ -30,7 +30,7 @@
                     Congratulations!! You have made it to the end!!
                 <br>
                     You proved that you are the deserving one for the Super Power.<br>
-                    You are blessed with the Super Power which most of the people don't have and that is INTELLIGENCE.<br>
+                    You are blessed and enlightened with the Super Power which most of the people don't have and that is INTELLIGENCE.<br>
                     All the best for your bright future.<br>
                     Thank You.
                 </div>
