--- a/chub/templates/chub/Endpage.html
+++ b/chub/templates/chub/Endpage.html
@@ -15,27 +15,24 @@
 
 <body>
     <div class="flex direction">
+        <br> 
         <div class="size flex ">
             <!-- TECHNOTHLON 2K22 -->
+            <img style="margin-bottom: -100px ;" src="{% static "\images\Technothlon white.svg" %}" alt="">
         </div>
-        <br> 
-        
-    
         <div class="flex direction content">
             <div class="flex">
-                <div>
-                    <img src="{% static '/images/technothlon.png'%}" class="img1" alt="">
-                </div>
-                <div class="size3  ">
+                <div class="size3 raw ">
                     Congratulations!! You have made it to the end!!
                 <br>
                     You proved that you are the deserving one for the Super Power.<br>
                     You are blessed and enlightened with the Super Power which most of the people don't have and that is INTELLIGENCE.<br>
                     All the best for your bright future.<br>
-                    Thank You.
+                    <h3 style="text-align: center ;">Thank You!!</h3>
                 </div>
             </div>
         </div>
+        <img id="mascot" src="{% static '/images/technotholon.png'%}" class="img1" style="height: 300px ; width: 300px; margin-top: 50px ;"  alt="">
     </div>
 
 </body>
