login page change

--- a/chub/templates/chub/login.html
+++ b/chub/templates/chub/login.html
@@ -41,7 +41,7 @@
                     {%endfor%}
                     {%endif%}
                     <div class="username ">
-                        {{form.username.label}}
+                        Roll Number
                         <br>
                         {{form.username}}
                         <br>
